--- a/src/index.css
+++ b/src/index.css
@@ -23,11 +23,11 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
+  margin: 0px;
   min-width: 320px;
   min-height: 100vh;
+  background: #172633;
+  background: linear-gradient(145deg, rgba(23, 38, 51, 1) 60%, rgba(89, 106, 121, 1) 100%);
 }
 
 h1 {
