--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -48,7 +48,7 @@
   padding: 0.5rem 1rem;
   text-transform: uppercase;
   font-size: 0.75rem;
-  color: white;
+  color: rgb(134, 132, 132);
   cursor: pointer;
   mix-blend-mode: difference;
 }
@@ -57,7 +57,7 @@
   position: absolute;
   height: 2rem;
   border-radius: 9999px;
-  background-color: white;
+  background-color: rgb(197, 195, 195);
   z-index: 0;
 }
 
