--- a/src/styles/products.css
+++ b/src/styles/products.css
@@ -33,8 +33,11 @@
   display:flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 40px 10px;
-  gap: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 70%;
+  padding: 20px 10px;
+  gap: 50px;
   
 }
 
@@ -43,7 +46,7 @@
   height: 86px;
   background: transparent;
   position: relative;
-  margin: 43px 6px;
+  margin: 23px 6px ;
   perspective: 1200px;
   transition: transform 0.3s ease-in-out;
   
