updated contactus and admin dashboard

--- a/src/styles/partners.css
+++ b/src/styles/partners.css
@@ -11,7 +11,7 @@
 }
 
 .partners-heading span {
-  background: linear-gradient(90deg, #00f0ff, #ae00ff);
+  background: linear-gradient(90deg, #7a00ff, #00e0ff);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
