--- a/src/styles/contactus.css
+++ b/src/styles/contactus.css
@@ -11,9 +11,13 @@
 
 .contact-header h1 {
   font-size: 2.5rem;
-  color: #00ffff;
+  background: linear-gradient(90deg, #7a00ff, #00e0ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   margin-bottom: 10px;
 }
+
+
 
 .contact-header p {
   color: #ccc;
@@ -41,7 +45,9 @@
 
 .contact-title {
   font-size: 1.8rem;
-  color: #00ffff;
+  background: linear-gradient(90deg, #7a00ff, #00e0ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   margin-bottom: 20px;
   text-align: center;
 }
@@ -64,7 +70,7 @@
 
 .contact-form input:focus,
 .contact-form textarea:focus {
-  outline: 2px solid #00ffff;
+  outline: 2px solid #473296;
 }
 
 .form-buttons {
@@ -76,17 +82,17 @@
 .form-buttons button {
   flex: 1;
   padding: 10px;
-  background-color: #00ffff;
+  background-color: #473296;
   border: none;
-  color: black;
-  font-weight: bold;
+  color: #ffffff;
+  /* font-weight: bold; */
   border-radius: 10px;
   cursor: pointer;
   transition: background 0.3s ease;
 }
 
 .form-buttons button:hover {
-  background-color: #58e6ff;
+  background-color: #473296;
 }
 
 .contact-info {
