--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -14,14 +14,24 @@ body {
 /* Explore Section */
 .explore-section {
   text-align: center;
-  padding: 10px 20px;
+  padding: 80px 20px;
 } 
+
+.explore-title span{
+  background: linear-gradient(90deg, #7a00ff, #00e0ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: bold;
+}
 
 .explore-title {
   font-size: 2.5rem;
   background: linear-gradient(to right, #a855f7, #3b82f6);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  /* background: linear-gradient(90deg, #7a00ff, #00e0ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; */
 }
 
 .explore-description {
