Updated Sponser Page

--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #0b0b12;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -33,5 +31,5 @@ body {
   /* background: #172633;
   background: linear-gradient(145deg, rgba(23, 38, 51, 1) 60%, rgba(89, 106, 121, 1) 100%); */
   /* background-image: url("img.png"); */
-  background-color: #0f0e0e;
+  background-color: #0b0b12;
 }
