--- a/src/styles/services.css
+++ b/src/styles/services.css
@@ -1,5 +1,7 @@
 .services-wrapper {
-  padding: 40px 20px;
+  /* padding: 40px 20px; */
+  padding-top: 1px;
+  padding-bottom: 80px;
   color: #f5f5f5;
   min-height: 100vh;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -13,6 +15,10 @@
   margin: 0 auto 50px;
   position: relative;
   z-index: 2;
+  border-radius: 4px;
+  padding: 5px;
+  backdrop-filter: blur(15px);
+  margin-top: 90px;
 }
 
 .intro h1 {
@@ -21,6 +27,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   margin-bottom: 15px;
+  margin-top: 1px;
 }
 
 .intro p {
@@ -30,11 +37,15 @@
 }
 
 .cards-container {
-  display: grid;
-  gap: 30px;
-  row-gap: 40px;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  max-width: 1200px;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 70%;
+  padding : 20px 10px;
+  justify-content: center;
+  gap: 50px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 80px;
+  padding: 40px 20px;
   margin: 0 auto;
 }
 
